--- a/src/app/core/components/login/login.component.css
+++ b/src/app/core/components/login/login.component.css
@@ -1,6 +1,7 @@
-.binance
-{
-    color:aliceblue;
-    text-decoration: none; 
-    font-size: large;
-} 
+.btn-link {
+  color: #ffff;
+}
+
+.invalid-feedback {
+  color: #ffff;
+}
