--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -2,118 +2,84 @@
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mx-auto">
-          <div class="card-group">
-            <div class="card p-4">
-              <div class="card-body">
-                <form
-                  name="LoginForm"
-                  (ngSubmit)="LoginForm.form.valid && onSubmit()"
-                  #LoginForm="ngForm"
-                  novalidate
-                >
-                  <h1>Login</h1>
-                  <p class="text-muted">Faça login em sua conta</p>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"
-                        ><i class="icon-user"></i
-                      ></span>
-                    </div>
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Email"
-                      name="email"
-                      #email="ngModel"
-                      [class.is-invalid]="!email.valid && email.touched"
-                      autocomplete="email"
-                      [(ngModel)]="user.email"
-                      required
-                    />
-                    <div
-                      class="invalid-feedback"
-                      *ngIf="!email.valid && email.touched"
-                    >
-                      Informe o E-mail!
-                    </div>
+        <div class="col-md-6 mx-auto">
+          <div class="card text-white bg-success p-4">
+            <div class="card-body">
+              <form
+                name="LoginForm"
+                (ngSubmit)="LoginForm.form.valid && onSubmit()"
+                #LoginForm="ngForm"
+                novalidate
+              >
+                <h1><i class="fa fa-television"></i> T&T Eletrônica</h1>
+                <p>Faça login em sua conta</p>
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"
+                      ><i class="icon-user"></i
+                    ></span>
                   </div>
-                  <div class="input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"
-                        ><i class="icon-lock"></i
-                      ></span>
-                    </div>
-                    <input
-                      type="password"
-                      class="form-control"
-                      placeholder="Password"
-                      name="password"
-                      #password="ngModel"
-                      autocomplete="current-password"
-                      [class.is-invalid]="!password.valid && password.touched"
-                      [(ngModel)]="user.password"
-                      required
-                    />
-
-                    <div
-                      class="invalid-feedback"
-                      *ngIf="!password.valid && password.touched"
-                    >
-                      Informe a senha!
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-6">
-                      <button
-                        type="submit"
-                        class="btn btn-primary px-4"
-                        [disabled]="!LoginForm.valid"
-                      >
-                        Login
-                      </button>
-                    </div>
-                    <div class="col-6 text-right">
-                      <button
-                        routerLink="/forget-password"
-                        type="button"
-                        class="btn btn-link px-0"
-                      >
-                        Esqueceu a Senha?
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div
-              class="card text-white bg-primary py-5 d-md-down-none"
-              style="width: 44%"
-            >
-              <div class="card-body text-center">
-                <div>
-                  <h2><i class="fa fa-btc"></i> Cactus Trader</h2>
-                  <p>
-                    O nosso Bot funciona junto com a
-                    <a
-                      class="binance"
-                      href="https://accounts.binance.com/pt-BR/register"
-                      target="_blanck"
-                      ><b>Binance</b></a
-                    >
-                    . Caso ainda não tenha uma conta com eles, cadastre-se
-                    gratuitamente.
-                  </p>
-                  <button
-                    routerLink="/register"
-                    type="button"
-                    class="btn btn-primary active mt-3"
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Email"
+                    name="email"
+                    #email="ngModel"
+                    [class.is-invalid]="!email.valid && email.touched"
+                    autocomplete="email"
+                    [(ngModel)]="user.email"
+                    required
+                  />
+                  <div
+                    class="invalid-feedback"
+                    *ngIf="!email.valid && email.touched"
                   >
-                    Registre-se!
-                  </button>
+                    Informe o E-mail!
+                  </div>
                 </div>
-              </div>
+                <div class="input-group mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"
+                      ><i class="icon-lock"></i
+                    ></span>
+                  </div>
+                  <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Password"
+                    name="password"
+                    #password="ngModel"
+                    autocomplete="current-password"
+                    [class.is-invalid]="!password.valid && password.touched"
+                    [(ngModel)]="user.password"
+                    required
+                  />
+
+                  <div
+                    class="invalid-feedback"
+                    *ngIf="!password.valid && password.touched"
+                  >
+                    Informe a senha!
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-6">
+                    <button type="submit" class="btn btn-write px-5">
+                      Login
+                    </button>
+                  </div>
+                  <div class="col-6 text-write text-right">
+                    <button
+                      routerLink="/forget-password"
+                      type="button"
+                      class="btn btn-link px-0"
+                    >
+                      Esqueceu a Senha?
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
