--- a/src/app/modules/customer/customers-list/customers-list.component.html
+++ b/src/app/modules/customer/customers-list/customers-list.component.html
@@ -1,1 +1,15 @@
-<p>customers-list works!</p>
+<div class="animated fadeIn">
+  <router-outlet></router-outlet>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card card-border">
+        <div class="card-body">
+          <button class="btn btn-primary" (click)="insert()">
+            <i class="fa fa-plus"></i> Adicionar Cliente
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
